# TransMEP

./: .gitignore  LICENSE  README.md  pyproject.toml
benches/: compare_grid_search.py  prof_grid_search_batched.py  prof_grid_search_cpu.py
tests/: test_model.py  test_optimize.py
transmep/: __init__.py  __main__.py  cli.py  criterion_optimization.py  data.py  foundation_model.py  model.py  optimize.py  questionary_validation.py  reports.py  stats.py
